--- a/public/css/def.css
+++ b/public/css/def.css
@@ -1,8 +1,8 @@
 .titlebox{
 	background-color: rgba(0, 0, 0, 0.45);
-	height: 50rem;
+	height: 75rem;
 	width: 120rem;
-	transform: translate(22.5%,30%);
+	transform: translate(25%,0);
 	border: 4px solid #989898;
 	border-radius: 10px;
 	padding: 0.625rem;
@@ -20,7 +20,9 @@ body{
 	padding: 0;
 	height: 100%;
 	overflow-y: scroll;
-	scrollbar-width: none;
+	overflow-x: hidden;
+	scrollbar-width: 0px;
+	scrollbar-color: rgba(0,0,0,0);
 }
 
 #follow_bg{
@@ -45,13 +47,12 @@ body{
 
 .nav-box{
 	width: 20rem;
-	background-color: rgb(17, 108, 141);
+	background-color: rgba(224, 235, 175,1);
+	border: 0.125rem solid rgb(191, 188, 175);
 	position: fixed;
 	top: 0px;
 	left: 0px;
 	bottom: 0px;
-	overflow-y: hidden;
-	overflow-x: hidden;
 	text-align: center;
 }
 
@@ -77,7 +78,7 @@ body{
 
 .nav-box ul .nav-block:hover {
 	color: #989898;
-	background-color: rgba(37, 86, 175, 0.8);
+	background-color: rgba(176, 184, 137, 0.8);
 	border-radius: 4px 4px 4px 4px;
 	transform: translate(-2%,0);
 	align-items: center;
@@ -117,7 +118,7 @@ body{
 }
 
 .nav-box .nav-two li:hover{
-	background: rgb(44, 83, 126);
+	background: rgba(176, 184, 137, 1.0);
 }
 
 .hide-decoration{
@@ -131,11 +132,37 @@ body{
 
 .Text{
 	background-color: aliceblue;
-	top: 40%;
 	width: 158.6rem;
-	overflow: hidden;
 }
-.TextTitle{
-	font-size: 10rem;
+.TextTitle h1{
+	font-size: 6rem;
 	transform: translate(20%,0);
+}
+
+.titlebox h3{
+	text-align: center;
+	font-size: 40px;
+	color: rgba(152, 152, 152, 0.5);
+}
+
+.nav-text-color{
+	color: #99916a;
+}
+
+.titlebox h4{
+	align-items: center;
+	text-align: center;
+	font-size: 1.75rem;
+	color: rgba(191, 174, 145, 0.7);
+}
+
+.button_addfriend{
+	position: absolute;
+	transform: translate(267.5%,0);
+	background-color: rgba(152, 152, 152, 0.8);
+	color: rgba(120, 110, 92, 1.0);
+	font-size: 50px;
+	height: 9.375rem;
+	width: 18.75rem;
+	border-radius: 40px;
 }
