--- a/public/css/def.css
+++ b/public/css/def.css
@@ -1,12 +1,14 @@
 .titlebox{
+	position: absolute;
 	background-color: rgba(0, 0, 0, 0.45);
-	height: 75rem;
-	width: 120rem;
-	transform: translate(25%,0);
+	height: 90%;
+	width: 80%;
+	/*transform: translate(25%,0);*/
 	border: 4px solid #989898;
 	border-radius: 10px;
 	padding: 0.625rem;
-	margin: 0.625rem;
+	margin-top: 1.5%;
+	transform: translate(20%,0);
 }
 
 .title{
@@ -35,7 +37,6 @@ body{
 	top: 0;
 	left: 0;
 	filter: blur(8px);
-	/*transform: translate(-75%,-20%);*/
 	transform: translate(60%,50%);
 	background-image: url('/img/Image_1716011177383.png'); /* 替换为你的图片路径 */
     background-position: center;
@@ -46,7 +47,8 @@ body{
 }
 
 .nav-box{
-	width: 20rem;
+	position: sticky;
+	width: 12.5%;
 	background-color: rgba(224, 235, 175,1);
 	border: 0.125rem solid rgb(191, 188, 175);
 	position: fixed;
@@ -59,7 +61,7 @@ body{
 .nav-box ul{
 	list-style: none;
 	line-height: 3.125rem;
-	font-size: 1.75rem;
+	font-size: 180%;
 	color: #989898;
 	align-items: center;
 	text-align: center;
@@ -131,9 +133,11 @@ body{
 }
 
 .Text{
-	position: sticky;
+	position: absolute;
 	background-color: aliceblue;
-	width: 158.6rem;
+	width: 200%;
+	margin-top: 50%;
+	transform: translate(-11.5%,0);
 	z-index: -1;
 }
 .TextTitle h1{
